jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080       # พอร์ตที่ Service รับมา
      targetPort: 8080 # ส่งต่อไปที่ Pod
  type: ClusterIP
